# Langgralfred

./: .gitignore  Alfred.py  README.md  langchain_tools.py  main.py  pyproject.toml
